--- a/public/wcr/css/buttons.css
+++ b/public/wcr/css/buttons.css
@@ -39,9 +39,12 @@
   color:gold;
   background-color:transparent;
   margin:auto;
-  position:relative;
+  position:absolute;
   width: 30px;
-  padding-left:65px;
+  padding-left:15px;
+  margin-top: 21px;
+
+
 }
 
 
@@ -55,19 +58,23 @@
   text-transform: uppercase;
 }
 /*dedication for cp*/
-.kamatis{
-  display:none;
-  font-size:1em;
+.ddcatcp{
   line-height:1.1em;
   color:gold;
   background-color:transparent;
   position:relative;
+  border-style: solid;
+  border-radius: 15px;
+  display:none;
+  border-color: gold;
+  font-style: bold;
+  padding: 15px 20px 15px 20px;
 }
 
-.kamatis:hover{
+.ddcatcp:hover{
   color:#ffffff;
   text-decoration:none;
-  border-color:#ff7536;
+  border-color:maroon;
 }
 /* VOLUME CONTROL */
 #vol-control
@@ -75,6 +82,7 @@
   background-color: gold;
   position:relative;
   margin-right: 30px;
+  margin-left: 35px;
 
 }
 
@@ -129,9 +137,10 @@
 {
   display:none;
 }
-.kamatis
+.ddcatcp
 {
   display:block;
+  margin-left: 98px;
 }
 }
 @media only screen and (max-width: 1024px) {
@@ -143,7 +152,7 @@
   background-color:transparent;
  border-radius: 30%;
   width: 78px;
-  height: 78px;
+  height: 70px;
   margin-right: 10px;
   position:relative;
   float:left;
@@ -151,8 +160,9 @@
 }
 #metadataholder
 {
-  width: 50%;
-  margin-left: 3px;
+  width: 60%;
+  float:left;
+  margin-top: 20px;
 }
 }
 @media only screen and (max-width: 1024px) {
