--- a/public/wcr/css/style.css
+++ b/public/wcr/css/style.css
@@ -22,7 +22,7 @@
    border-right-color: maroon;
 
    float:center;
-   background-color: black;
+   background-color: #1c1c1b;
 }
 /*--------------------------------------------------------------
 # Sticky Footer
@@ -50,8 +50,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color:black;
-    opacity: 0.6;
+    background-color:#1c1c1b;
     width: 100%;
     height: 100%;
 }
@@ -371,9 +370,8 @@ h1, h2, h3, h4, h5, h6, #appn, #metadata {
   display: inline-block;
   color: gold;
   font-family: "Poppins", sans-serif;
-  font-weight: bold;
   text-transform: uppercase;
-  font-size: 13px;
+  font-size: 10pt;
   outline: none;
 }
 
@@ -464,7 +462,7 @@ h1, h2, h3, h4, h5, h6, #appn, #metadata {
   bottom: 0;
   z-index: 998;
   opacity: 0.6;
-  background: maroon;
+  background: black;
   left: -260px;
   width: 260px;
   overflow-y: auto;
