--- a/public/wcr/css/style.css
+++ b/public/wcr/css/style.css
@@ -50,6 +50,7 @@
     bottom: 0;
     left: 0;
     right: 0;
+    opacity: 0.8;
     background-color:#1c1c1b;
     width: 100%;
     height: 100%;
